name:                httpare
version:             0.1.0
synopsis:            Compare one website to another.
-- description:

homepage:            http://guthub.com/tobiassjosten/httpare

license:             MIT
license-file:        LICENSE
author:              Tobias Sjösten
maintainer:          tobias@tobiassjosten.net
copyright:           Copyright (c) 2013 Tobias Sjösten

category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable httpare
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base ==4.5.*, httpare, network, HTTP >=2.4

library
  hs-source-dirs:    src
  exposed-modules:
    Httpare.Class
  build-depends:     base
